# chatsql

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit.py
